breaks, markup, em, p

--- a/notes.html
+++ b/notes.html
@@ -8,7 +8,22 @@
  <h1><em>DAI'S ROUGH HTML NOTES</em></h1>
  Spaces, tabs, line breaks = <strong>whitespace</strong>
 
+ <h2>Breaks</h2>
+<p>Mary had a little lamb<br>
+ Its skin as tough as shell<br>
+ And every file that toad would write<br>
+ It used HTML.
+</p>
 
+
+
+ <h2><em>Markup</em></h2>
+ <p>The fundametal characteristic of HTML, where the emphasis of the text is enclosed within what are
+  referred to as "tags" which is the main function. These tags are the angle brackets ">".
+ They are not revealed by browser. Reffered to as "non-empty" tags due to what is between the
+ beginning and end tags.
+
+ Parameters are able to be placed within the beginning tag BEFORE the ending</p>
 
 
 </body>
