--- a/notes.html
+++ b/notes.html
@@ -15,8 +15,6 @@
  It used HTML.
 </p>
 
-
-
  <h2><em>Markup</em></h2>
  <p>The fundametal characteristic of HTML, where the emphasis of the text is enclosed within what are
   referred to as "tags" which is the main function. These tags are the angle brackets ">".
@@ -25,6 +23,33 @@
 
  Parameters are able to be placed within the beginning tag BEFORE the ending</p>
 
+<h2><em>Paragraphs</em></h2>
+<p>This is a story...</p>
+<p>Where we add paragraph tags to make it better.</p>
+
+<p>Once upon a time there was a baby tiger named Talia. Talia lived in the middle of a fearsome
+ jungle</p>
+ <p>Talia was the most fearsome of all, though she was only a baby.</p>
+
+ <h2><em>Elements</em></h2>
+  <p>look at dis <sub>subscript</sub> text.</p>
+
+  <p>Ayoooo<sup>this is superscript</sup>.</p>
+
+  <em>H O W D Y</em>
+
+ Every element starts and ends with a tag.
+
+ Did you
+ know? 
+     Spaces,
+     tabs,
+ and line
+ breaks     are     called 
+      <strong>whitespace</strong>.
+
+<h2>Nesting</h2>
+ <p><em>Hello</em> <mark>Imak!</mark></p>
 
 </body>
 </html>
