--- a/notes.html
+++ b/notes.html
@@ -51,5 +51,28 @@
 <h2>Nesting</h2>
  <p><em>Hello</em> <mark>Imak!</mark></p>
 
+<!-- See if you can replicate this design:
+
+> # My HTML Notes
+> 
+> This page is a collection of my awesome notes about HTML!
+> 
+> ## The Web
+> 
+> The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).
+> 
+> ## What is HTML?
+> 
+> HTML stands for _Hypertext Markup Language_. It's used to define the structure or layout of a web page. -->
+
+ <h1>My HTML Notes<h1>
+  <p>This page is a collection of my awesome notes about HTML!</p>
+<h2>The Web<h2>
+  <p>The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).</p>
+<h2>What is HTML?</h2>
+  <p>HTML stands for Hypertext Markup Language. It's used to define the structure or layout of a web page.</p>
+
+
+
 </body>
 </html>
