--- a/notes.html
+++ b/notes.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
  <head>
   <title>MY ROUGH HTML NOTES</title>
  </head>
 
- <body>
+ 
  <h1><em>DAI'S ROUGH HTML NOTES</em></h1>
  Spaces, tabs, line breaks = <strong>whitespace</strong>
 
@@ -48,31 +46,170 @@
  breaks     are     called 
       <strong>whitespace</strong>.
 
-<h2>Nesting</h2>
+<h3>Nesting</h3>
  <p><em>Hello</em> <mark>Imak!</mark></p>
 
-<!-- See if you can replicate this design:
 
-> # My HTML Notes
-> 
-> This page is a collection of my awesome notes about HTML!
-> 
-> ## The Web
-> 
-> The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).
-> 
-> ## What is HTML?
-> 
-> HTML stands for _Hypertext Markup Language_. It's used to define the structure or layout of a web page. -->
+<h3>See if you can replicate this design:</h3>
+<p>
+  <ul>
+    <h5>My HTML Notes</h5>
+    <li>This page is a collection of my awesome notes about HTML!
+    <h5>The Web</h5>
+    <li></li>The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).
+    <h5>What is HTML?</h5>
+    <li>HTML stands for _Hypertext Markup Language_. It's used to define the structure or layout of a web page.</li>
+  </ul>
+</p>
 
- <h1>My HTML Notes<h1>
+ <h3>My HTML Notes</h3>
   <p>This page is a collection of my awesome notes about HTML!</p>
-<h2>The Web<h2>
+<h3>The Web</h3>
   <p>The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).</p>
-<h2>What is HTML?</h2>
+<h4>What is HTML?</h4>
   <p>HTML stands for Hypertext Markup Language. It's used to define the structure or layout of a web page.</p>
 
+<h3> My Chemistry Notes</h3>
+<p>
+  <strong>Molecule name:</strong> <em>Sulfur hexafluoride</em><br>
+</p>
+<p>
+  <strong>Molecule formula:</strong> SF<sub>6</sub><br>
+</p>
+<p>
+  <strong>Note:</strong> This gas has a much higher density than air. Basically the opposite of helium.
+  <mark>Crazy!</mark>
+</p>
+
+<!-- unabstracting block elements -->
+<h3>Unabstracting block elements</h3>
+<style>
+  p{
+    border: 1px solid yellow;
+  }
+</style>
+
+Call me Diamond.
+<br><br>
+Just don't call me Crystal.
+
+<p>Call me Diamond.</p>
+<p>Just don't call me Crystal.</p>
+<!-- unabstracting block elements -->
+
+<!-- nest the two paragraphs inside of a div -->
+<h3>Nest the two paragraphs inside of a div</h3>
+<style>
+  p{border: 2px solid red;}
+  div{border: 2px solid blue;}
+</style>
+<div>
+  <p>Call me Diamond.</p>
+  <p>Just don't call me Crystal.</p>
+</div>
+
+<!-- Lists -->
+<h3>Lists</h3>
+<h4>Diamond's 4 Step Protocol</h4>
+<ol>
+  <li>Get rich.</li>
+  <li>Don't go broke.</li>
+  <li>Repeat step 1.</li>
+  <li>Repeat step 2.</li>
+</ol>
+
+<h1>Diamond's Morning Routine</h1>
+<ul>
+  <li>Stretch</li>
+  <li>Breathe deeply and evenly</li>
+  <li>Express gratitude for the day</li>
+  <li>Brush teeth</li>
+</ul>
+
+<!--Nested lists  -->
+<h3>Nested Lists</h3>
+<p>
+ <ul>
+  <li>Lions
+   <ol>
+    <li>Cheetahs
+    <li>Jaguars
+   </ol>
+  <li>Tigers
+   <ol>
+    <li>Panthers
+    <li>Lynx
+   </ol>
+  <li>Bears
+   <ol>
+    <li>Panda
+    <li>Koala
+   </ol>
+</ul>
+
+<!-- Indentation -->
+<h3>Indentation</h3>
+<p>when you leave off the optional closing tag on a list item li<br>
+  many code editors will indent to the right because they think you're<br>
+  wanting to nest something inside that li</p>
+ 
+
+  <em>poor indent</em> *seen in code*
+  <ol>
+   <li>Tomatoes
+     <li>Carrots
+   <li>Cucumbers
+  </ol>
+  <em>good indent</em>
+  <ol>
+   <li>Tomatoes
+   <li>Carrots
+   <li>Cucumbers
+  </ol>
+  <em>poor indent</em> *seen in code*
+  <ol>
+   <li>Tomatoes
+     <li>Carrots
+       <li>Cucumbers
+  </ol>
+ 
+  <em>Indentation</em>
+  <p>Here is another example of a nested list:</p><ul>
+   <li>Mammals
+     <ol>
+       <li>Raccoons
+       <li>Gorillas
+     </ol>
+   <li>Reptiles
+     <ol>
+       <li>Iguanas
+       <li>Cobras
+     </ol>
+   <li>Birds
+     <ol>
+       <li>Ostriches
+       <li>Ravens
+     </ol>
+  </ul>
+  <p>Indentation can help show the nested structure of the elements.</p>
+  <p>It can also make the code <em>much</em> easier to read!</p>
+
+<!-- Implied Close Tags -->
+<h3>Implied Close Tags</h3>
+<p>Rambunctious, playful, and mischievous <strong>notes</strong> inside the first <em>paragraph</em>.</p>
+<p style="color: salmon;">The second <em>paragraph</em> is now a <strong>different</strong> color,
+it's <mark>salmon</mark>.
+</p>
+This text floats alone<br>
+as it does not reside inside a <em>paragraph</em> element...<br>
+...yet!<br>
+<p>This text is inside a <em>third</em> paragraph element.</p>
+
+<!-- The Anchor Tag -->
+<h3>The Anchor Tag</h3>
+<p>Anchor 'a' for links</p>
+<a href="https://en.ryte.com/wiki/Anchor_Tag">Ryte</a>
 
 
-</body>
-</html>
+
+
