document body cleanup. html sect complete

--- a/notes.html
+++ b/notes.html
@@ -1,215 +1,301 @@
- <head>
-  <title>MY ROUGH HTML NOTES</title>
- </head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>MY ROUGH HTML NOTES</title>
+    <style>
+      p {
+        border: 1px solid pink;
+      }
+    </style>
+  </head>
 
- 
- <h1><em>DAI'S ROUGH HTML NOTES</em></h1>
- Spaces, tabs, line breaks = <strong>whitespace</strong>
+  <body>
+    <h1><em>DAI'S ROUGH HTML NOTES</em></h1>
+    Spaces, tabs, line breaks = <strong>whitespace</strong>
 
- <h2>Breaks</h2>
-<p>Mary had a little lamb<br>
- Its skin as tough as shell<br>
- And every file that toad would write<br>
- It used HTML.
-</p>
+    <h2>Breaks</h2>
+    <p>
+      Mary had a little lamb<br />
+      Its skin as tough as shell<br />
+      And every file that toad would write<br />
+      It used HTML.
+    </p>
 
- <h2><em>Markup</em></h2>
- <p>The fundametal characteristic of HTML, where the emphasis of the text is enclosed within what are
-  referred to as "tags" which is the main function. These tags are the angle brackets ">".
- They are not revealed by browser. Reffered to as "non-empty" tags due to what is between the
- beginning and end tags.
+    <h2><em>Markup</em></h2>
+    <p>
+      The fundametal characteristic of HTML, where the emphasis of the text is
+      enclosed within what are referred to as "tags" which is the main function.
+      These tags are the angle brackets ">". They are not revealed by browser.
+      Reffered to as "non-empty" tags due to what is between the beginning and
+      end tags. Parameters are able to be placed within the beginning tag BEFORE
+      the ending
+    </p>
 
- Parameters are able to be placed within the beginning tag BEFORE the ending</p>
+    <h2><em>Paragraphs</em></h2>
+    <p>This is a story...</p>
+    <p>Where we add paragraph tags to make it better.</p>
 
-<h2><em>Paragraphs</em></h2>
-<p>This is a story...</p>
-<p>Where we add paragraph tags to make it better.</p>
+    <p>
+      Once upon a time there was a baby tiger named Talia. Talia lived in the
+      middle of a fearsome jungle
+    </p>
+    <p>Talia was the most fearsome of all, though she was only a baby.</p>
 
-<p>Once upon a time there was a baby tiger named Talia. Talia lived in the middle of a fearsome
- jungle</p>
- <p>Talia was the most fearsome of all, though she was only a baby.</p>
+    <h2><em>Elements</em></h2>
+    <p>look at dis <sub>subscript</sub> text.</p>
 
- <h2><em>Elements</em></h2>
-  <p>look at dis <sub>subscript</sub> text.</p>
+    <p>Ayoooo<sup>this is superscript</sup>.</p>
 
-  <p>Ayoooo<sup>this is superscript</sup>.</p>
+    <em>H O W D Y</em>
 
-  <em>H O W D Y</em>
+    Every element starts and ends with a tag. Did you know? Spaces, tabs, and
+    line breaks are called
+    <strong>whitespace</strong>.
 
- Every element starts and ends with a tag.
+    <h3>Nesting</h3>
+    <p><em>Hello</em> <mark>Imak!</mark></p>
 
- Did you
- know? 
-     Spaces,
-     tabs,
- and line
- breaks     are     called 
-      <strong>whitespace</strong>.
+    <h3>See if you can replicate this design:</h3>
+    <ul>
+      <li>This page is a collection of my awesome notes about HTML!</li>
+      <li>
+        The Web (or World Wide Web) is a collection of documents and other
+        files. Most of the documents are made using Hypertext Markup Language
+        (HTML).
+      </li>
+      <li>
+        HTML stands for Hypertext Markup Language. It's used to define the
+        structure or layout of a web page.
+      </li>
+    </ul>
 
-<h3>Nesting</h3>
- <p><em>Hello</em> <mark>Imak!</mark></p>
+    <h3>My HTML Notes</h3>
+    <p>This page is a collection of my awesome notes about HTML!</p>
+    <h3>The Web</h3>
+    <p>
+      The Web (or World Wide Web) is a collection of documents and other files.
+      Most of the documents are made using Hypertext Markup Language (HTML).
+    </p>
+    <h4>What is HTML?</h4>
+    <p>
+      HTML stands for Hypertext Markup Language. It's used to define the
+      structure or layout of a web page.
+    </p>
 
+    <h3>My Chemistry Notes</h3>
+    <p><strong>Molecule name:</strong> <em>Sulfur hexafluoride</em><br /></p>
+    <p><strong>Molecule formula:</strong> SF<sub>6</sub><br /></p>
+    <p>
+      <strong>Note:</strong> This gas has a much higher density than air.
+      Basically the opposite of helium.
+      <mark>Crazy!</mark>
+    </p>
 
-<h3>See if you can replicate this design:</h3>
-<p>
-  <ul>
-    <h5>My HTML Notes</h5>
-    <li>This page is a collection of my awesome notes about HTML!
-    <h5>The Web</h5>
-    <li></li>The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).
-    <h5>What is HTML?</h5>
-    <li>HTML stands for _Hypertext Markup Language_. It's used to define the structure or layout of a web page.</li>
-  </ul>
-</p>
+    <!-- unabstracting block elements -->
+    <h3>Unabstracting block elements</h3>
+    <!-- <style>
+    p {
+      border: 1px solid yellow;
+    }
+  </style> -->
 
- <h3>My HTML Notes</h3>
-  <p>This page is a collection of my awesome notes about HTML!</p>
-<h3>The Web</h3>
-  <p>The Web (or World Wide Web) is a collection of documents and other files. Most of the documents are made using Hypertext Markup Language (HTML).</p>
-<h4>What is HTML?</h4>
-  <p>HTML stands for Hypertext Markup Language. It's used to define the structure or layout of a web page.</p>
+    Call me Diamond.
+    <br /><br />
+    Just don't call me Crystal.
 
-<h3> My Chemistry Notes</h3>
-<p>
-  <strong>Molecule name:</strong> <em>Sulfur hexafluoride</em><br>
-</p>
-<p>
-  <strong>Molecule formula:</strong> SF<sub>6</sub><br>
-</p>
-<p>
-  <strong>Note:</strong> This gas has a much higher density than air. Basically the opposite of helium.
-  <mark>Crazy!</mark>
-</p>
+    <p>Call me Diamond.</p>
+    <p>Just don't call me Crystal.</p>
+    <!-- unabstracting block elements -->
 
-<!-- unabstracting block elements -->
-<h3>Unabstracting block elements</h3>
-<style>
-  p{
-    border: 1px solid yellow;
-  }
-</style>
+    <!-- nest the two paragraphs inside of a div -->
+    <h3>Nest the two paragraphs inside of a div</h3>
+    <!-- <style>
+    p {
+      border: 2px solid red;
+    }
 
-Call me Diamond.
-<br><br>
-Just don't call me Crystal.
+    div {
+      border: 2px solid blue;
+    }
+  </style> -->
+    <div>
+      <p>Call me Diamond.</p>
+      <p>Just don't call me Crystal.</p>
+    </div>
 
-<p>Call me Diamond.</p>
-<p>Just don't call me Crystal.</p>
-<!-- unabstracting block elements -->
+    <!-- Lists -->
+    <h3>Lists</h3>
+    <h4>Diamond's 4 Step Protocol</h4>
+    <ol>
+      <li>Get rich.</li>
+      <li>Don't go broke.</li>
+      <li>Repeat step 1.</li>
+      <li>Repeat step 2.</li>
+    </ol>
 
-<!-- nest the two paragraphs inside of a div -->
-<h3>Nest the two paragraphs inside of a div</h3>
-<style>
-  p{border: 2px solid red;}
-  div{border: 2px solid blue;}
-</style>
-<div>
-  <p>Call me Diamond.</p>
-  <p>Just don't call me Crystal.</p>
-</div>
+    <h1>Diamond's Morning Routine</h1>
+    <ul>
+      <li>Stretch</li>
+      <li>Breathe deeply and evenly</li>
+      <li>Express gratitude for the day</li>
+      <li>Brush teeth</li>
+    </ul>
 
-<!-- Lists -->
-<h3>Lists</h3>
-<h4>Diamond's 4 Step Protocol</h4>
-<ol>
-  <li>Get rich.</li>
-  <li>Don't go broke.</li>
-  <li>Repeat step 1.</li>
-  <li>Repeat step 2.</li>
-</ol>
+    <!--Nested lists  -->
+    <h3>Nested Lists</h3>
+    <p></p>
+    <ul>
+      <li>
+        Lions
+        <ol>
+          <li>Cheetahs</li>
+          <li>Jaguars</li>
+        </ol>
+      </li>
 
-<h1>Diamond's Morning Routine</h1>
-<ul>
-  <li>Stretch</li>
-  <li>Breathe deeply and evenly</li>
-  <li>Express gratitude for the day</li>
-  <li>Brush teeth</li>
-</ul>
+      <li>
+        Tigers
+        <ol>
+          <li>Panthers</li>
+          <li>Lynx</li>
+        </ol>
+      </li>
 
-<!--Nested lists  -->
-<h3>Nested Lists</h3>
-<p>
- <ul>
-  <li>Lions
-   <ol>
-    <li>Cheetahs
-    <li>Jaguars
-   </ol>
-  <li>Tigers
-   <ol>
-    <li>Panthers
-    <li>Lynx
-   </ol>
-  <li>Bears
-   <ol>
-    <li>Panda
-    <li>Koala
-   </ol>
-</ul>
+      <li>
+        Bears
+        <ol>
+          <li>Panda</li>
+          <li>Koala</li>
+        </ol>
+      </li>
+    </ul>
 
-<!-- Indentation -->
-<h3>Indentation</h3>
-<p>when you leave off the optional closing tag on a list item li<br>
-  many code editors will indent to the right because they think you're<br>
-  wanting to nest something inside that li</p>
- 
+    <!-- Indentation -->
+    <h3>Indentation</h3>
+    <p>
+      when you leave off the optional closing tag on a list item li<br />
+      many code editors will indent to the right because they think you're<br />
+      wanting to nest something inside that li
+    </p>
 
-  <em>poor indent</em> *seen in code*
-  <ol>
-   <li>Tomatoes
-     <li>Carrots
-   <li>Cucumbers
-  </ol>
-  <em>good indent</em>
-  <ol>
-   <li>Tomatoes
-   <li>Carrots
-   <li>Cucumbers
-  </ol>
-  <em>poor indent</em> *seen in code*
-  <ol>
-   <li>Tomatoes
-     <li>Carrots
-       <li>Cucumbers
-  </ol>
- 
-  <em>Indentation</em>
-  <p>Here is another example of a nested list:</p><ul>
-   <li>Mammals
-     <ol>
-       <li>Raccoons
-       <li>Gorillas
-     </ol>
-   <li>Reptiles
-     <ol>
-       <li>Iguanas
-       <li>Cobras
-     </ol>
-   <li>Birds
-     <ol>
-       <li>Ostriches
-       <li>Ravens
-     </ol>
-  </ul>
-  <p>Indentation can help show the nested structure of the elements.</p>
-  <p>It can also make the code <em>much</em> easier to read!</p>
+    <em>poor indent</em> *seen in code*
+    <ol>
+      <li>Tomatoes</li>
+      <li>Carrots</li>
+      <li>Cucumbers</li>
+    </ol>
 
-<!-- Implied Close Tags -->
-<h3>Implied Close Tags</h3>
-<p>Rambunctious, playful, and mischievous <strong>notes</strong> inside the first <em>paragraph</em>.</p>
-<p style="color: salmon;">The second <em>paragraph</em> is now a <strong>different</strong> color,
-it's <mark>salmon</mark>.
-</p>
-This text floats alone<br>
-as it does not reside inside a <em>paragraph</em> element...<br>
-...yet!<br>
-<p>This text is inside a <em>third</em> paragraph element.</p>
+    <em>good indent</em>
+    <ol>
+      <li>Tomatoes</li>
+      <li>Carrots</li>
+      <li>Cucumbers</li>
+    </ol>
 
-<!-- The Anchor Tag -->
-<h3>The Anchor Tag</h3>
-<p>Anchor 'a' for links</p>
-<a href="https://en.ryte.com/wiki/Anchor_Tag">Ryte</a>
+    <em>poor indent</em> *seen in code*
+    <ol>
+      <li>Tomatoes</li>
+      <li>Carrots</li>
+      <li>Cucumbers</li>
+    </ol>
 
+    <em>Indentation</em>
+    <p>Here is another example of a nested list:</p>
+    <ul>
+      <li>
+        Mammals
+        <ol>
+          <li>Raccoons</li>
+          <li>Gorillas</li>
+        </ol>
+      </li>
 
+      <li>
+        Reptiles
+        <ol>
+          <li>Iguanas</li>
+          <li>Cobras</li>
+        </ol>
+      </li>
 
+      <li>
+        Birds
+        <ol>
+          <li>Ostriches</li>
+          <li>Ravens</li>
+        </ol>
+      </li>
+    </ul>
 
+    <p>Indentation can help show the nested structure of the elements.</p>
+    <p>It can also make the code <em>much</em> easier to read!</p>
+
+    <!-- Implied Close Tags -->
+    <h3>Implied Close Tags</h3>
+    <p>
+      Rambunctious, playful, and mischievous <strong>notes</strong> inside the
+      first <em>paragraph</em>.
+    </p>
+    <p style="color: salmon;">
+      The second <em>paragraph</em> is now a <strong>different</strong> color,
+      it's <mark>salmon</mark>.
+    </p>
+    This text floats alone<br />
+    as it does not reside inside a <em>paragraph</em> element...<br />
+    ...yet!<br />
+    <p>This text is inside a <em>third</em> paragraph element.</p>
+
+    <!-- The Anchor Element -->
+    <h3>The Anchor Element</h3>
+    <p>Anchor 'a' for links</p>
+    <a href="https://en.ryte.com/wiki/Anchor_Tag">Ryte</a>
+
+    <!-- Image Element -->
+    <h3>Image Element</h3>
+    <p>
+      <img
+        src="https://fakeurl.example.net/fish.png"
+        alt="photo of a fish"
+      /><br />
+      The img tag is used to embed an image in an HTML page.<br />
+
+      Images are not technically inserted into a web page; images are linked to
+      web pages. The img tag creates a holding space for the referenced
+      image.<br />
+
+      The img tag has two required attributes:<br />
+      <strong>src</strong> - Specifies the path to the image
+      <strong>alt</strong> - Specifies an alternate text for the image, if the
+      image for some reason cannot be displayed<br />
+
+      Placing an img element tag inside an a tag between its I/O tags allows a
+      user to be directed to a different webpage once clicked
+      <img
+        src="https://64.media.tumblr.com/742cba808dd12183750f6d8e57a03007/88f871e71e638617-55/s1280x1920/6595051b0ccba3ef156dff38fec32f3b85ea76c5.png"
+        alt="tired wojac"
+      />
+
+      <!-- Anchor and Image Element practice -->
+    </p>
+
+    <h3>Anchor and Image Element practice</h3>
+    <ol>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Money" target="_blank"> Money</a>
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/God" target="_blank"> God</a>
+      </li>
+    </ol>
+
+    <img
+      src="https://images.freeimages.com/images/premium/large-thumbs/4588/4588657-stack-of-money.jpg "
+      alt="real money"
+    />
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b3/Shield-Trinity-Scutum-Fidei-English.svg/800px-Shield-Trinity-Scutum-Fidei-English.svg.png"
+      alt="Divine Trinity"
+    />
+  </body>
+</html>
