--- a/inline_style.html
+++ b/inline_style.html
@@ -1,4 +1,16 @@
-<h1>Inline Style Practice</h1>
-<p style="color: red;">This is a red paragraph.</p>
-<p style="color: green;">This is a green paragraph.</p>
-<p style="color: blue;">This is a blue paragraph.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>CSS Notes</title>
+  </head>
+
+  <body>
+    <h1><em>DAI'S CSS NOTES</em></h1>
+    <h2>Inline Style Practice</h2>
+    <p style="color: red; text-align: center;">This is a red paragraph. Roy</p>
+    <p style="color: green; text-align: center;">This is a green paragraph. G</p>
+    <p style="color: blue; text-align: center;">
+      This is a blue paragraph. Biv
+    </p>
+  </body>
+</html>
