--- a/inline_style.html
+++ b/inline_style.html
@@ -8,9 +8,21 @@
     <h1><em>DAI'S CSS NOTES</em></h1>
     <h2>Inline Style Practice</h2>
     <p style="color: red; text-align: center;">This is a red paragraph. Roy</p>
-    <p style="color: green; text-align: center;">This is a green paragraph. G</p>
+    <p style="color: green; text-align: center;">
+      This is a green paragraph. G
+    </p>
     <p style="color: blue; text-align: center;">
       This is a blue paragraph. Biv
     </p>
+
+    <h2>Style Element Practice</h2>
+    <style>
+      p {
+        text-align: center;
+      }
+    </style>
+    <p>This is a haiku</p>
+    <p>So I want each line centered</p>
+    <p>Let’s make it stylish</p>
   </body>
 </html>
