--- a/TTToe.html
+++ b/TTToe.html
@@ -1,26 +1,24 @@
 <!-- making a simple tic-tac-toe display using an unordered list, and list items -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <title>Tic-Tac-Toe</title>
- <link rel="stylesheet" type="text/css" href="./">
-</head>
+  <head>
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" type="text/css" href="./css/TTToeStyle.css" />
+  </head>
 
-<body>
- <div class="container">
-  <ul class="board">
-   <li class="box">X</li>
-   <li class="box">O</li>
-   <li class="box">X</li>
-   <li class="box">O</li>
-   <li class="box">X</li>
-   <li class="box">O</li>
-   <li class="box">X</li>
-   <li class="box">O</li>
-   <li class="box">X</li>
-  </ul>
- </div>
+  <body>
+    <ul>
+      <li>X</li>
+      <li></li>
+      <li>O</li>
 
+      <li></li>
+      <li>X</li>
+      <li>O</li>
 
-
+      <li>X</li>
+      <li>O</li>
+      <li>X</li>
+    </ul>
+  </body>
 </html>
