--- a/grid_area_practice.html
+++ b/grid_area_practice.html
@@ -26,11 +26,23 @@
       }
       #one {
         /* set grid-area here: row start/column start/ row end/ column end */
-        grid-area: 1/1/1/2;
+        grid-area:three;
       }
-      /* #two {
+      #two {
         grid-area:one
-      } */
+      }
+      #three {
+        grid-area:two
+      }
+      #four {
+        grid-area:five;
+      }
+      #five {
+        grid-area:six
+      }
+      #six {
+        grid-area:four
+      }
     </style>
   </head>
 
