figured out feature box issue

--- a/blog-prac/blog-post-1.html
+++ b/blog-prac/blog-post-1.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="header box">Header</div>
-      <div class="feature"></div>
+      <div class="feature box">Feature</div>
       <div class="content box">Content</div>
       <div class="footer box">Footer</div>
     </div>
