--- a/nestedgrid/nestgrid.html
+++ b/nestedgrid/nestgrid.html
@@ -1,5 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Nested Grid</title>
+    <link rel="stylesheet">
+    <style>
+     #nestedGrid {
+         display: grid;
+         grid-template-columns: 50% 50%;
+         grid-template-rows: 50% 50%;
+         border: 3px solid black;
+     }
+     .photoBox {
+      width: 250px;
+      height: 150px;
+      border: 1px solid wheat;
+      background: plum;
+     }
+
+    </style>
+   </head>
+<!-- Create nested grid in content -->
+<!-- make that grid an image gallery -->
+<body>
+    <div class="container">
+        <div class="header box">Header</div>
+        <div class="sidebar box">Blog Posts</div>
+        <div class="content box"></div>
+        <div class="photoBox"></div>
+    </div>
 
 
 
