added img. not sure why orient is off

--- a/nestedgrid/nestgrid.html
+++ b/nestedgrid/nestgrid.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Nested Grid</title>
-    <link rel="stylesheet" />
+    <link rel="stylesheet" href="./nestedgridcss/nestedgridstyles.css" />
     <style>
       #nestedGrid {
         display: grid;
@@ -15,8 +15,25 @@
       .photoBox {
         width: 250px;
         height: 150px;
-        border: 1px solid wheat;
-        background: plum;
+        border: 1px solid red;
+        background: yellow;
+      }
+
+      #one {
+       background-image: url('./imgs/9aa35bae-7162-42ec-ae5f-f009270b287c_680x603.webp');
+       background-size: contain;
+      }
+      #two {
+        background-image: url('./imgs/A\ Rei.png');
+        background-size: contain;
+      }
+      #three {
+        background-image: url('./imgs/eclipse.png');
+        background-size: contain;
+      }
+      #four {
+        background-image: url('./imgs/IMG_3927.jpg');
+        background-size: contain;
       }
     </style>
   </head>
