--- a/nestedgrid/nestgrid.html
+++ b/nestedgrid/nestgrid.html
@@ -10,7 +10,7 @@
         grid-template-columns: 50% 50%;
         grid-template-rows: 50% 50%;
         grid-gap: 10px;
-        border: 3px solid black;
+        border: 2px solid black;
       }
       .photoBox {
         width: 250px;
@@ -45,10 +45,10 @@
       <div class="sidebar box">Blog Posts</div>
       <div class="content box">
         <div id="nestedGrid">
-          <div id="one" class="photoBox"><h1>Thursday</h1></div>
-          <div id="two" class="photoBox"><h1>Summer</h1></div>
-          <div id="three" class="photoBox"><h1>Rei</h1></div>
-          <div id="four" class="photoBox"><h1>Vanilla</h1></div>
+          <div id="one" class="photoBox"></div>
+          <div id="two" class="photoBox"></div>
+          <div id="three" class="photoBox"></div>
+          <div id="four" class="photoBox"></div>
         </div>
       </div>
       <div class="footer box">Footer</div>
