--- a/nestedgrid/nestgrid.html
+++ b/nestedgrid/nestgrid.html
@@ -9,8 +9,8 @@
         display: grid;
         grid-template-columns: 50% 50%;
         grid-template-rows: 50% 50%;
-        grid-gap: 10px;
-        border: 2px solid black;
+        /* grid-gap: 2px; */
+        border: 3px solid black;
       }
       .photoBox {
         width: 250px;
