switched nestedGrid from id to class

--- a/nestedgrid/nestgrid.html
+++ b/nestedgrid/nestgrid.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta
+      charset="UTF-8"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+      name="viewport"
+    />
     <title>Nested Grid</title>
     <link rel="stylesheet" href="./nestedgridcss/nestedgridstyles.css" />
   </head>
@@ -10,8 +14,8 @@
       <div class="header box">Header</div>
       <div class="sidebar box">Blog Posts</div>
       <div class="content box">
-          <!-- Create nested grid in content -->
-        <div id="nestedGrid">
+        <!-- Create nested grid in content -->
+        <div class="nestedGrid">
           <div id="one" class="photoBox"><h1>Thursday</h1></div>
           <div id="two" class="photoBox"><h1>Summer</h1></div>
           <div id="three" class="photoBox"><h1>Rei</h1></div>
